playbooks/k3s/manifests/homeassistant/03_svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - protocol: TCP
      port: 8123
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: mosquitto
  namespace: homeassistant
spec:
  selector:
    app: mosquitto
  ports:
  - port: 1883
    targetPort: 1883
---
apiVersion: v1
kind: Service
metadata:
  name: node-red
  namespace: homeassistant
spec:
  selector:
    app: node-red
  type: ClusterIP
  ports:
    - name: node-red-ui
      port: 1880
      protocol: TCP
      targetPort: node-red-ui
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: zigbee2mqtt
  name: zigbee2mqtt
  namespace: homeassistant
spec:
  ports:
    - name: zigbee2mqtt
      port: 8080
      targetPort: http
      protocol: TCP
  selector:
    app: zigbee2mqtt
